# svcms-synaptic

./: .gitignore  .mcp.json  CLAUDE.md  CLAUDE.md.backup.1751723530426  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.claude/: settings.local.json
.serena/: project.yml
.synaptic/: config.toml
docs/: Auto-Discovery Algorithm.md  Missing Features Analysis.md  SVCMS - Overview.md  SVCMS - Specification - Home CLAUDE.md  SVCMS - Specification – Home CLAUDE with MCP.md  SVCMS - Specification.md  SVCMS's Synaptic 🧠 - Architecture Design Document.md  Synaptic Phase 2 Questions and Answers.md  Synaptic 🧠 - Architecture Design Document v2.0.md  mcp-server-design.md  project-wide-config.toml  system-wide-config.toml
mcp-server/: .gitignore  README.md  TODO.md  tsconfig.json
mcp-server/src/: index.ts  types.ts
mcp-server/src/config/: loader.ts
mcp-server/src/git/: client.ts
mcp-server/src/mcp/: server.ts
mcp-server/src/memory/: extractor.ts  manager.ts
mcp-server/src/tools/: analyzer.ts  detector.ts
src/: commit_types.rs  config.rs  git.rs  lib.rs  main.rs  memory.rs  obsidian.rs  parser.rs  types.ts
src/config/: loader.ts
src/mcp/: server.ts
src/memory/: sync.ts
src/parser/: CLAUDE.md
src/svcms/: parser.ts  specification.ts
src/utils/: logger.ts
