[package]
name = "synaptic"
version = "0.1.0"
authors = ["Corrado <cocosberlucens>"]
edition = "2021"
license = "MIT"
description = "Transform Git commits into Claude Code memories using SVCMS"
repository = "https://github.com/cocosberlucens/svcms-synaptic"
readme = "README.md"

[dependencies]
git2 = "0.18"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
regex = "1.10"
anyhow = "1.0"
chrono = "0.4"
colored = "2.1"

[dev-dependencies]
tempfile = "3.10"
